fix openapi.yaml for tags, category, photoUrls
