# handler/http.go
@@ -2,6 +2,7 @@ package handler
 
 import (
 	"encoding/json"
+	"fmt"
 	"net/http"
 	"src/petstore"
 	"src/storageservice"
@@ -24,6 +25,7 @@ func writeJSON(w http.ResponseWriter, status int, data interface{}) {
 
 func (h PetHandler) FindPets(w http.ResponseWriter, r *http.Request, params petstore.FindPetsParams) {
 	tags := *params.Tags
+	fmt.Printf("%#v\n", tags)
 	var limit int64
 	if params.Limit != nil {
 		limit = int64(*params.Limit)
@@ -50,6 +52,13 @@ func (h PetHandler) AddPet(w http.ResponseWriter, r *http.Request) {
 		writeError(w, http.StatusBadRequest, err)
 		return
 	}
+	fmt.Println("name", newPet.Name)
+	for _, tag := range *newPet.Tags {
+		fmt.Println("tag", *tag.Name)
+	}
+	fmt.Println("status", *newPet.Status)
+	fmt.Println("photoUrls", *newPet.PhotoUrls)
+	fmt.Println("category", *newPet.Category.Name)
 
 	pet, err := h.Storage.CreatePet(r.Context(), &newPet)
 	if err != nil {
