# swagger/openapi.yaml
@@ -164,9 +164,30 @@ components:
         name:
           type: string
           description: Name of the pet
-        tag:
+        category:
+          type: object
+          properties:
+            id:
+              type: integer
+              format: int64
+            name:
+              type: string
+        photoUrls:
+          type: array
+          items:
+            type: string
+        tags:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                format: int64
+              name:
+                type: string
+        status:
           type: string
-          description: Type of the pet
     Error:
       required:
         - code
